@@ -9,9 +9,9 @@ import com.gustas.videogamestore.dto.request.GameRequestDto;
 import com.gustas.videogamestore.dto.response.GameResponseDto;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
+
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -58,7 +58,7 @@ public class GameMapper {
 
         return games.stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
